--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.6.0"
+    "@babel/polyfill": "^7.6.0",
+    "axios": "^0.19.0"
   }
 }
